# opencvDemo

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
docker/: Dockerfile  prepareDeps.ps1
include/: loadmanipulate.hpp
src/: loadmanipulate.cpp  main.cpp
test/: test_arithmetic.cpp  test_loadmaniputale.cpp
